projects/lungmen.akn/src/apps/n8n/security/network-policy.allow-n8n-from-cilium-gateway.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows the Cilium Gateway API to route traffic to n8n main editor instance.
      Traffic proxied by Cilium Gateway API carries the reserved:ingress identity,
      as per https://docs.cilium.io/en/latest/security/policy/layer3/#entities-based
  name: allow-n8n-main-from-cilium-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: n8n
      app.kubernetes.io/component: main
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "5678"
              protocol: TCP
